# snipfile

./: .gitignore  Makefile  README.md  pyproject.toml
snipfile/: _parser.py  cli.py  commands.py
test/: __init__.py
test/data/golden_in/: test.md
test/data/golden_out/test/data/golden_in/nested/: test.md
test/end2end/: test_main.py
test/integration/: test_snip.py
test/unit/: test_parser.py
